--- a/public/assets/content/css/rtl-dir.css
+++ b/public/assets/content/css/rtl-dir.css
@@ -80,7 +80,7 @@ body.body-rtl .navbar-lang {
     margin: 0;
 }
 body.body-rtl .lang-text {
-    padding: 0 4px 0 5px;
+    padding: 2px 4px 0 5px;
 }
 body.body-rtl .navbar-lang .dropdown-menu a img {
     margin-left: 7px;
@@ -373,6 +373,9 @@ body.body-rtl .about .section-1 .pref {
     }
     body.body-rtl .contact .bef-contact p {
         text-align: right;
+    }
+    body.body-rtl .navbar-lang {
+        margin-left: 0;
     }
 
     /* Footer */
