fix arabic msgs

--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -4640,7 +4640,7 @@ body {
   color: #666;
   margin-bottom: 15px;
 }
-.nf-socialmedida {
+.nf-socialmedia {
   border-top: 1px solid #666;
     border-bottom: 1px solid #666;
     padding: 8px 0;
