--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -4190,7 +4190,9 @@ a img {
 .bg-4 {
   background-color: #752d87 !important;
 }
-
+.read-more-content {
+    word-break: break-word !important;
+}
 .bg-hover-4:hover {
   background-color: #752d87 !important;
 }
